--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css" />
-    <title>Document</title>
+    <title>Weather Dashboard</title>
 </head>
 <body>
+    <div class="input">
+        <input type="text" class="inputValue" placeholder="Enter City Name">
+        <input type="submit" value="Submit" class="button">
+    </div>
+
+    <div class="display">
+        <h1 class="name"></h1>
+        <p class="description"></p>
+        <p class="temperature"></p>
+    </div>
+
     <script type="text/javascript" src="./assets/script.js"></script>
 </body>
 </html>
