Adding functionality to search form

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <!-- Search Bar & Past Searches -->
             <div class="col-3">
                 <form id="search-form">
-                    <input id="city-search-input" type="text" placeholder="Please Enter Your City"/>
-                    <button type="submit" class="btn btn-primary btn-lg" id="search-button">Search</button>
+                    <input id="user-input" type="text" placeholder="Please Enter Your City"/>
+                    <button type="submit" class="btn btn-primary btn-lg" id="submit-button">Submit</button>
                 </form>
                 <ul id="past-searches" class="past-searches flex-column list-group"></ul>
             </div>
