--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     <input id="user-input" type="text" placeholder="Please Enter Your City"/>
                     <button type="submit" class="btn btn-primary btn-lg" id="submit-button">Submit</button>
                 </form>
-                <ul id="past-searches" class="past-searches flex-column list-group"></ul>
+                <ul id="previous-searches" class="previous-searches flex-column list-group"></ul>
             </div>
             <!-- Weather Forecasts -->
             <div class="col-9 all-forecasts">
-                <div id="today-forecast" class="list-group"></div>
+                <div id="todays-forecast" class="list-group"></div>
                 <div class="d-flex row" id="five-day-forecast"></div>
                 <div class="d-flex row">
                     <div class="col day-forecast"></div>
