--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/style.css" />
     <!-- Fav Icon -->
@@ -17,29 +19,29 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <h1 class="heading">Weather Dashboard</h1>
+    <header class="d-flex justify-content-center">
+        <h1>Weather Dashboard</h1>
     </header>
     <div class="container">
-        <div>
+        <div class="d-flex row">
             <!-- Search Bar & Past Searches -->
-            <div>
+            <div class="col-3">
                 <form id="search-form">
                     <input id="user-input" type="text" placeholder="Please Enter Your City"/>
-                    <button type="submit" id="submit-button">Submit</button>
+                    <button type="submit" id="submit-button" class="btn-dark btn-sm">Submit</button>
                 </form>
-                <ul id="previous-searches" class="previous-searches"></ul>
+                <ul id="previous-searches" class="flex-column previous-searches"></ul>
             </div>
             <!-- Weather Forecasts -->
-            <div class="all-forecasts">
+            <div class="col-9 card p-10 all-forecasts">
                 <div id="todays-forecast" class="list-group"></div>
-                <div id="five-day-forecast"></div>
-                <div>
-                    <div class="day-forecast"></div>
-                    <div class="day-forecast"></div>
-                    <div class="day-forecast"></div>
-                    <div class="day-forecast"></div>
-                    <div class="day-forecast"></div>
+                <div id="five-day-forecast" class="d-flex row"></div>
+                <div class="weather d-flex row">
+                    <div class="col day-forecast"></div>
+                    <div class="col day-forecast"></div>
+                    <div class="col day-forecast"></div>
+                    <div class="col day-forecast"></div>
+                    <div class="col day-forecast"></div>
                 </div>
             </div>
         </div>
