--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
@@ -33,7 +33,7 @@
                 <ul id="previous-searches" class="flex-column previous-searches"></ul>
             </div>
             <!-- Weather Forecasts -->
-            <div class="col-9 card p-10 all-forecasts">
+            <div class="col-9 card all-forecasts">
                 <div id="todays-forecast" class="list-group"></div>
                 <div id="five-day-forecast" class="d-flex row"></div>
                 <div class="weather d-flex row">
