Adjusted class name

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 <div id="todays-forecast" class="list-group"></div>
                 <div id="five-day-forecast" class="d-flex row"></div>
                 <div class="weather d-flex row">
-                    <div class="col day-forecast"></div>
-                    <div class="col day-forecast"></div>
-                    <div class="col day-forecast"></div>
-                    <div class="col day-forecast"></div>
-                    <div class="col day-forecast"></div>
+                    <div class="col day"></div>
+                    <div class="col day"></div>
+                    <div class="col day"></div>
+                    <div class="col day"></div>
+                    <div class="col day"></div>
                 </div>
             </div>
         </div>
